# besserberg

./: .dockerignore  .gitignore  Dockerfile  README.md  README.rst  docker-compose.prod.yml  docker-compose.yml  policy.xml  pyproject.toml  requirements.txt  setup.cfg  uwsgi.ini
besserberg/: app.py  uwsgi.ini
besserberg/backends/: __init__.py  _pdfkit.py  _trml2pdf.py  base.py
besserberg/misc/: requirements.txt
dockerfiles/app/: Dockerfile  Dockerfile.production  wkhtmltopdf.sh
dockerfiles/nginx/: Dockerfile  app.nginx.conf
tests/: test_backends.py
