[metadata]
name = besserberg
author = Vnet a.s.
author-email = db@vnet.sk
summary = Miscroservice for converting HTML files to PDF
description-file = README.md
home-page = https://github.com/Vnet-as/besserberg
license = BSD
classifier =
    Development Status :: Alpha
    Environment :: Web
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    pdf
    web
    rest
[files]
packages =
    besserberg
[entry_points]
console_scripts =
    besserberg = besserberg.app:main
